include/win32/windows.h

typedef long                LONG;
typedef unsigned int        UINT;
typedef unsigned long       DWORD;
typedef HANDLE              HINSTANCE;
typedef HANDLE              HWND;
typedef LPCWSTR             LPCTSTR;
typedef LPCSTR              LPCTSTR;
typedef HANDLE              HICON;
typedef HANDLE              HBRUSH;
typedef HICON               HCURSOR;
typedef LONG_PTR            LPARAM;
typedef UINT_PTR            WPARAM;
/* MessageBox customizations: */
#define MB_ABORTRETRYIGNORE         0x00000002L
#define MB_CANCELTRYCONTINUE        0x00000006L
#define MB_OK                       0x00000000L
#define MB_OKCANCEL                 0x00000001L
#define MB_RETRYCANCEL              0x00000005L
#define MB_YESNO                    0x00000004L
#define MB_YESNOCANCEL              0x00000003L
#define MB_ICONEXCLAMATION          0x00000030L
#define MB_ICONINFORMATION          0x00000040L
#define MB_ICONQUESTION             0x00000020L
#define MB_ICONERROR                0x00000010L
#define MB_DEFBUTTON1               0x00000000L
#define MB_DEFBUTTON2               0x00000100L
#define MB_DEFBUTTON3               0x00000200L
#define MB_APPLMODAL                0x00000000L
#define MB_SYSTEMMODAL              0x00001000L
#define MB_TASKMODAL                0x00002000L
#define MB_TOPMOST                  0x00040000L
#define IDABORT                     (3)
#define IDCANCEL                    (2)
#define IDCONTINUE                  (11)
#define IDIGNORE                    (5)
#define IDNO                        (7)
#define IDOK                        (1)
#define IDRETRY                     (4)
#define IDYES                       (6)
/* Window Styles: */
#define WS_OVERLAPPED               0x00000000L
#define WS_POPUP                    0x80000000L
#define WS_CHILD                    0x40000000L
#define WS_MINIMIZE                 0x20000000L
#define WS_VISIBLE                  0x10000000L
#define WS_DISABLED                 0x08000000L
#define WS_CLIPSIBLINGS             0x04000000L
#define WS_CLIPCHILDREN             0x02000000L
#define WS_CAPTION                  0x00C00000L
#define WS_BORDER                   0x00800000L
#define WS_DLGFRAME                 0x00400000L
#define WS_VSCROLL                  0x00200000L
#define WS_HSCROLL                  0x00100000L
#define WS_SYSMENU                  0x00080000L
#define WS_THICKFRAME               0x00040000L
#define WS_MINIMIZEBOX              0x00020000L
#define WS_MAXIMIZEBOX              0x00010000L
/* Common Window Styles: */
#define WS_OVERLAPPEDWINDOW         (WS_OVERLAPPED     | \
                                     WS_CAPTION        | \
                                     WS_SYSMENU        | \
                                     WS_THICKFRAME     | \
                                     WS_MINIMIZEBOX    | \
                                     WS_MAXIMIZEBOX)
#define CW_USEDEFAULT               ((int)0x80000000)
#define CS_VREDRAW                      0x0001
#define CS_HREDRAW                      0x0002
/* Messages: */
#define PM_NOREMOVE                 0x0000
#define PM_REMOVE                   0x0001
#define WM_NULL                     0x0000
#define WM_CREATE                   0x0001
#define WM_DESTROY                  0x0002
#define WM_MOVE                     0x0003
#define WM_SIZE                     0x0005
#define WM_PAINT                    0x000F
#define WM_CLOSE                    0x0010
#define WM_QUIT                     0x0012
#define WM_KEYDOWN                  0x0100
#define WM_KEYUP                    0x0101
#define WM_SYSCOMMAND               0x0112
#define WM_ACTIVATE                 0x0006
#define WA_INACTIVE                 0
#define WA_ACTIVE                   1
#define WA_CLICKACTIVE              2
#define SC_KEYMENU                  0xF100
/* Virtual Keys: */
#define VK_BACK                         0x08
#define VK_TAB                          0x09
#define VK_SHIFT                        0x10
#define VK_CONTROL                      0x11
#define VK_MENU                         0x12
#define VK_RETURN                       0x0D
#define VK_ESCAPE                       0x1B
#define VK_SPACE                        0x20
#define VK_LEFT                         0x25
#define VK_UP                           0x26
#define VK_RIGHT                        0x27
#define VK_DOWN                         0x28
#define VK_DELETE                       0x2E
/* ========================================================================== */
/* Structures:                                                                */
typedef struct _RECT {
    LONG        left;
    LONG        top;
    LONG        right;
    LONG        bottom;
} RECT, *PRECT, *LPRECT;
/* Window: */
typedef LRESULT (CALLBACK *WNDPROC)(HWND, UINT, WPARAM, LPARAM);
typedef struct tagWNDCLASS {
    UINT        style;
    WNDPROC     lpfnWndProc;
    int         cbClsExtra;
    int         cbWndExtra;
    HINSTANCE   hInstance;
    HICON       hIcon;
    HCURSOR     hCursor;
    HBRUSH      hbrBackground;
    LPCTSTR     lpszMenuName;
    LPCTSTR     lpszClassName;
} WNDCLASS, *PWNDCLASS;
/* Messages: */
typedef struct tagPOINT {
  LONG x;
  LONG y;
} POINT, *PPOINT;
typedef struct tagMSG {
    HWND        hwnd;
    UINT        message;
    WPARAM      wParam;
    LPARAM      lParam;
    DWORD       time;
    POINT       pt;
} MSG, *PMSG, *LPMSG;