include/win32/Zig/win32_pending_bridge.zig


pub const MB_OK = 0x00000000;
pub const MB_OKCANCEL = 0x00000001;
pub const MB_ABORTRETRYIGNORE = 0x00000002;
pub const MB_YESNO = 0x00000004;
pub const MB_YESNOCANCEL = 0x00000003;
pub const MB_RETRYCANCEL = 0x00000005;
pub const MB_CANCELTRYCONTINUE = 0x00000006;
pub const MB_ICONEXCLAMATION = 0x00000030;
pub const MB_ICONINFORMATION = 0x00000040;
pub const MB_ICONQUESTION = 0x00000020;
pub const MB_ICONERROR = 0x00000010;
pub const MB_DEFBUTTON1 = 0x00000000;
pub const MB_DEFBUTTON2 = 0x00000100;
pub const MB_DEFBUTTON3 = 0x00000200;
pub const MB_APPLMODAL = 0x00000000;
pub const MB_SYSTEMMODAL = 0x00001000;
pub const MB_TASKMODAL = 0x00002000;
pub const MB_TOPMOST = 0x00040000;
pub const IDABORT = 3;
pub const IDCANCEL = 2;
pub const IDCONTINUE = 11;
pub const IDIGNORE = 5;
pub const IDNO = 7;
pub const IDOK = 1;
pub const IDRETRY = 4;
pub const IDYES = 6;
pub const WS_OVERLAPPED = 0x00000000;
pub const WS_POPUP = 0x80000000;
pub const WS_CHILD = 0x40000000;
pub const WS_MINIMIZE = 0x20000000;
pub const WS_VISIBLE = 0x10000000;
pub const WS_DISABLED = 0x08000000;
pub const WS_CLIPSIBLINGS = 0x04000000;
pub const WS_CLIPCHILDREN = 0x02000000;
pub const WS_CAPTION = 0x00C00000;
pub const WS_BORDER = 0x00800000;
pub const WS_DLGFRAME = 0x00400000;
pub const WS_VSCROLL = 0x00200000;
pub const WS_HSCROLL = 0x00100000;
pub const WS_SYSMENU = 0x00080000;
pub const WS_THICKFRAME = 0x00040000;
pub const WS_MINIMIZEBOX = 0x00020000;
pub const WS_MAXIMIZEBOX = 0x00010000;
pub const WS_OVERLAPPEDWINDOW = 0x00CF0000;
pub const CS_VREDRAW = 0x0001;
pub const CS_HREDRAW = 0x0002;
pub const PM_NOREMOVE = 0x0000;
pub const PM_REMOVE = 0x0001;
pub const WM_NULL = 0x0000;
pub const WM_CREATE = 0x0001;
pub const WM_DESTROY = 0x0002;
pub const WM_CLOSE = 0x0010;
pub const WM_QUIT = 0x0012;
pub const WM_PAINT = 0x000F;
pub const WM_SIZE = 0x0005;
pub const WM_MOVE = 0x0003;
pub const WM_KEYDOWN = 0x0100;
pub const WM_KEYUP = 0x0101;
pub const WM_SYSCOMMAND = 0x0112;
pub const WM_ACTIVATE = 0x0006;
pub const WM_COMMAND = 0x0111;
pub const WM_ENTERMENULOOP = 0x0211;
pub const WM_EXITMENULOOP = 0x0212;
pub const WA_INACTIVE = 0;
pub const WA_ACTIVE = 1;
pub const WA_CLICKACTIVE = 2;
pub const SC_KEYMENU = 0xF100;
pub const VK_BACK = 0x08;
pub const VK_TAB = 0x09;
pub const VK_SHIFT = 0x10;
pub const VK_CONTROL = 0x11;
pub const VK_MENU = 0x12;
pub const VK_RETURN = 0x0D;
pub const VK_ESCAPE = 0x1B;
pub const VK_SPACE = 0x20;
pub const VK_LEFT = 0x25;
pub const VK_UP = 0x26;
pub const VK_RIGHT = 0x27;
pub const VK_DOWN = 0x28;
pub const VK_DELETE = 0x2E;
pub const SM_CYMENU = 15;
pub const SW_HIDE = 0;
pub const SW_SHOWNORMAL = 1;
pub const SW_NORMAL = 1;
pub const SW_SHOWMINIMIZED = 2;
pub const SW_SHOWMAXIMIZED = 3;
pub const SW_MAXIMIZE = 3;
pub const SW_SHOWNOACTIVATE = 4;
pub const SW_SHOW = 5;
pub const SW_MINIMIZE = 6;
pub const SW_RESTORE = 9;
pub const SW_SHOWDEFAULT = 10;
pub const SW_FORCEMINIMIZE = 11;
pub const CW_USEDEFAULT: c_int = @bitCast(@as(u32, 0x80000000));
pub const RECT = extern struct { left: LONG = 0, top: LONG = 0, right: LONG = 0, bottom: LONG = 0 };
pub const MSG = extern struct { _padding: [48]u8 = [_]u8{0} ** 48 };
pub const WNDCLASS = extern struct { _padding: [48]u8 = [_]u8{0} ** 48 };
pub const WNDCLASSEXA = extern struct { _padding: [52]u8 = [_]u8{0} ** 52 };
pub const WNDCLASSEXW = extern struct { _padding: [52]u8 = [_]u8{0} ** 52 };
